DEX-27961 | fix: align lists

--- a/_src-lp/blocks/new-product-cards/new-product-cards.scss
+++ b/_src-lp/blocks/new-product-cards/new-product-cards.scss
@@ -277,6 +277,9 @@
                     ul {
                         padding-left: 0;
                         margin: 0;
+                        display: grid;
+                        grid-template-rows: subgrid;
+                        grid-row: span 10;
 
                         >li {
                             list-style: none;
@@ -285,6 +288,7 @@
                             >ul {
                                 padding-left: 0;
                                 margin-top: 12px;
+                                display: block;
 
                                 li {
                                     min-height: 19px;
